# cl-gen-magnum

./: gen-0-color-triangle.lisp  gen-1-cube.lisp  gen.lisp
source/: CMakeLists.txt  main.cpp
